--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
             <ul>Corn</ul>
 
         <h2>Preparation:</h2>
-        <p>Chop all the ingredients and mix all together.</p>
+        <p>Chop all the ingredients and mix all together.
+
+            Enjoy! you can now have lunch 😋
+
+        </p>
+
 </body>
 
 </html>
