--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My salad</title>
+
+    <link rel="styles" href="estilos.css">
 </head>
 <body>
-    <h1>Recipe: Salad</h1>
+    <h1 id="title">Recipe: Salad</h1>
     <img src="salad.png" alt="Ensalada Cesar>"
 
         <h2>Ingredients</h2>
