--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My salad</title>
 
-    <link rel="styles" href="estilos.css">
+    <link rel="stylesheet" href="./estilos.css">
 </head>
+
 <body>
     <h1 id="title">Recipe: Salad</h1>
-    <img src="salad.png" alt="Ensalada Cesar>"
-
-        <h2>Ingredients</h2>
+    <img src="salad.png">
+    <h2>Ingredients</h2>
         <p>The list of ingredients to prepare the salad are:</p>
-            <ul>Tomato</ul>
-            <ul>Chicken breast</ul>
-            <ul>Lettuce</ul>
-            <ul>Onion</ul>
-            <ul>Corn</ul>
-
-        <h2>Preparation:</h2>
-        <p>Chop all the ingredients and mix all together.
+        <ul>
+            <li>Tomato</li>
+            <li>Onion</li>
+            <li>Lettuce</li>
+            <li>Corn</li>
+        </ul>
+    <h3>Preparation:</h3>
+    <p>Chop all the ingredients and mix all together.
 
             Enjoy! you can now have lunch 😋
 
         </p>
-
+    
 </body>
 
 </html>
